# mockupgen

./: .gitignore  LICENSE.md  README.md  setup.cfg
mockupgen/: __main__.py  app_data.py  helpers.py  image_processing.py  mockupgen.py
mockupgen/templates/: info.json
