[metadata]
name = mockupgen
version = 1.0.0
author = Rohan Menon
description = A tool that can generate a 3D device mockup from a screenshot.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rmenon1008/mockupgen

[options]
packages = 
    mockupgen
install_requires =
    opencv-python
    numpy
    colorama

[options.entry_points]
console_scripts =
    mockupgen = mockupgen.mockupgen:main

[options.package_data]
    mockupgen = 
        templates/*
        templates/*/*
        templates/*/*/*