[metadata]
name = mockupgen
version = 1.5.1
author = Rohan Menon
description = A tool that generates a 3D device mockup from a screenshot.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rmenon1008/mockupgen

[options]
packages = 
    mockupgen
install_requires =
    opencv-python
    numpy
    colorama

[options.entry_points]
console_scripts =
    mockupgen = mockupgen.mockupgen:main
